# Reverse-Image-Search

./: .gitignore  PlaidMLTest.md  README.md  pictures.json  pyproject.toml  requirements.txt  vectors.npy
data/: images2.pickle  pictures.json  vectors.npy
reverse_image_search/: BuildVectors.py  haltakov_clip.py  pictures.json  test_CLIP.py  test_html.py  test_index.py  webapp.py
reverse_image_search/CLIP/: clip.py
reverse_image_search/html/: index.html
reverse_image_search/templates/: index.html
tests/: test_reverse_image_search.py
