[tool.poetry]
authors = ["Felix <afgoetze@gmail.com>"]
description = ""
name = "webapp"
version = "0.1.0"

[tool.poetry.dependencies]
faiss-cpu = "^1.6.5"
img2vec-pytorch = "^0.2.5"
python = "^3.7"
streamlit = "^0.72.0"
pygit2 = "^1.4.0"
torchvision = "^0.8.2"
ftfy = "^5.8"
regex = "^2020.11.13"
tqdm = "^4.56.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
ipython-autotime = "^0.2.0"
pytest = "^5.2"
pipreqs = "^0.4.10"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
